# fcitx5-android

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/org/fcitx/fcitx5/android/input/functionkit/: FunctionKitContractInstrumentationTest.kt  FunctionKitImeEndToEndInstrumentationTest.kt
app/src/androidTest/java/org/fcitx/fcitx5/android/input/voice/: FcitxImeSmokeInstrumentationTest.kt  SherpaOnnxInitializationInstrumentationTest.kt  WhisperInitializationInstrumentationTest.kt
app/src/androidTest/res/values/: function_kit_contract_placeholders.xml
app/src/debug/: AndroidManifest.xml
app/src/debug/java/org/fcitx/fcitx5/android/input/functionkit/: FunctionKitContractTestActivity.kt  FunctionKitImeE2EPlaygroundActivity.kt  FunctionKitUiContractModels.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/models/: README.md
app/src/main/assets/models/sherpa-onnx-streaming-zipformer-zh-14M-2023-02-23/: decoder-epoch-99-avg-1.onnx
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/androidaddonloader/: androidaddonloader.cpp
app/src/main/java/org/fcitx/fcitx5/android/: FcitxApplication.kt
app/src/main/java/org/fcitx/fcitx5/android/core/data/: DataManager.kt
app/src/main/java/org/fcitx/fcitx5/android/data/prefs/: AppPrefs.kt  ManagedPreferenceCategory.kt  ManagedPreferenceUi.kt
app/src/main/java/org/fcitx/fcitx5/android/data/theme/: ThemePrefs.kt
app/src/main/java/org/fcitx/fcitx5/android/input/: FcitxInputMethodService.kt  InputView.kt
app/src/main/java/org/fcitx/fcitx5/android/input/bar/: KawaiiBarComponent.kt
app/src/main/java/org/fcitx/fcitx5/android/input/broadcast/: InputBroadcastReceiver.kt  InputBroadcaster.kt
app/src/main/java/org/fcitx/fcitx5/android/input/clipboard/: ClipboardWindow.kt
app/src/main/java/org/fcitx/fcitx5/android/input/functionkit/: ClipboardActionsPromptReceiver.kt  ClipboardOverlayPromptManager.kt  FunctionKitAiChatBackend.kt  FunctionKitBindingInvocationContext.kt  FunctionKitBindingRegistry.kt  FunctionKitBindingSettingsStore.kt  FunctionKitBindingsAdapter.kt  FunctionKitBindingsWindow.kt  FunctionKitBindingsWindowController.kt  FunctionKitCatalogStore.kt  FunctionKitComposerDraftBuffer.kt  FunctionKitDefaults.kt  FunctionKitDisplayIconLoader.kt  FunctionKitEffectiveMode.kt  FunctionKitEnvelopeProbe.kt  FunctionKitFilePickerActivity.kt  FunctionKitFilePickerRegistry.kt  FunctionKitFileStore.kt  FunctionKitHostDiagnostics.kt  FunctionKitIconLoader.kt  FunctionKitInputSnapshotReader.kt  FunctionKitKitSettingsStore.kt  FunctionKitKitStudioRemoteAttach.kt  FunctionKitManifest.kt  FunctionKitPackageManager.kt  FunctionKitPermissionPolicy.kt  FunctionKitQuickAccessOrderer.kt  FunctionKitQuickAccessSpec.kt  FunctionKitRegistry.kt  FunctionKitRuntimePermissionResolver.kt  FunctionKitSnackbars.kt  FunctionKitTaskCenterWindow.kt  FunctionKitTaskDetailWindow.kt  FunctionKitTaskHub.kt  FunctionKitTaskTracker.kt  FunctionKitTestRegistry.kt  FunctionKitTgz.kt  FunctionKitWebViewHost.kt  FunctionKitWindow.kt  FunctionKitWindowPool.kt
app/src/main/java/org/fcitx/fcitx5/android/input/keyboard/: BaseKeyboard.kt  CommonKeyActionListener.kt  KeyAction.kt  KeyDefPreset.kt  KeyView.kt  KeyboardWindow.kt  TextKeyboard.kt  TextKeyboardMode.kt
app/src/main/java/org/fcitx/fcitx5/android/input/popup/: PopupPreset.kt
app/src/main/java/org/fcitx/fcitx5/android/input/preedit/: PreeditComponent.kt
app/src/main/java/org/fcitx/fcitx5/android/input/status/: StatusAreaAdapter.kt  StatusAreaEntry.kt  StatusAreaEntryUi.kt  StatusAreaWindow.kt
app/src/main/java/org/fcitx/fcitx5/android/input/voice/: AndroidSpeechRecognizerClient.kt  BuiltInVoiceEngine.kt  SherpaOnnxModelManager.kt  SherpaOnnxModelPreference.kt  SherpaOnnxRuntimeRouting.kt  SherpaOnnxVoiceEngine.kt  VoiceActivityDetector.kt  VoiceContextHotwords.kt  VoiceCorrectionLearningController.kt  VoiceEngine.kt  VoiceEngineFactory.kt  VoiceHoldBubbleComponent.kt  VoiceInlineBarComponent.kt  VoiceInlineSessionController.kt  VoiceInputContextReader.kt  VoiceInputLauncher.kt  VoiceInputPermission.kt  VoiceInputPrewarmer.kt  VoiceInputRuntime.kt  VoiceInputUi.kt  VoiceInputUiState.kt  VoiceInputWindow.kt  VoiceListeningState.kt  (+9 more)
app/src/main/java/org/fcitx/fcitx5/android/utils/: AppUtil.kt  Const.kt
app/src/main/res/drawable/: ic_baseline_close_24.xml  ic_baseline_grid_view_24.xml  ic_baseline_history_24.xml  ic_baseline_mic_18.xml  ic_baseline_star_24.xml  ic_baseline_star_border_24.xml  ic_baseline_storefront_24.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_debug.xml  ic_launcher_round.xml
app/src/main/res/values/: function_kit_task_center_strings.xml  ids.xml  input_view_ids.xml  keyboard_mode_strings.xml  strings.xml
app/src/main/res/values-zh-rCN/: function_kit_task_center_strings.xml  keyboard_mode_strings.xml  strings.xml
app/src/main/res/values-zh-rTW/: keyboard_mode_strings.xml  strings.xml
app/src/main/res/xml/: function_kit_file_paths.xml
app/src/test/java/org/fcitx/fcitx5/android/: ThemeSerializationTest.kt
app/src/voice/: AndroidManifest.xml
app/src/voice/assets/models/: README.md
app/src/voice/assets/models/sherpa-onnx-streaming-zipformer-small-ctc-zh-int8-2025-04-01/: model.int8.onnx
build-logic/: settings.gradle.kts
build-logic/convention/src/main/kotlin/: AndroidAppConventionPlugin.kt  AndroidPluginAppConventionPlugin.kt  DataDescriptorPlugin.kt  FcitxComponentPlugin.kt  FcitxHeadersPlugin.kt  NativeBuildTasks.kt  ProjectExtensions.kt  Versions.kt
docs/: FUNCTION_KITS.md
gradle/: libs.versions.toml
lib/plugin-base/src/debug/: AndroidManifest.xml
lib/plugin-base/src/main/: AndroidManifest.xml
lib/sherpa/: build.gradle.kts  proguard-rules.pro
lib/voice-core/: build.gradle.kts
lib/whisper/: build.gradle.kts
lib/whisper/src/main/cpp/: CMakeLists.txt  jni.c  jni.cpp
lib/whisper/src/main/java/com/whispercpp/whisper/: WhisperContext.kt  WhisperCpuConfig.kt
scripts/: download_whisper_model.ps1  setup_whisper_cpp.ps1
(+81 files in other folders)
